--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>i am meekoly</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+</head>
+<body>
+  <h1>i am peekoly</h1>
+</body>
+</html>
