--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,7 @@
     <title>Meeko Rusdi</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <h1>MEEKO RUSDI</h1>
+    <div id="root" />
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
