moved assets into images directory

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" />
     <meta
-      name="Meeko Rusdi"
-      content="Meekoly Rusdi Portfolio"
+      name="description"
+      content="Meekoly Rusdi is a software engineer who is passionate about learning new technologies and creating memorable user experiences."
     />
+    <meta property="og:title" content="Meeko Rusdi" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
