added meta tags and changed about

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       content="Meekoly Rusdi is a software engineer who is passionate about learning new technologies and creating memorable user experiences."
     />
     <meta property="og:title" content="Meeko Rusdi" />
+    <meta name="image" content="https://meekoly.com/images/selfie.jpg" />
+    <meta name="og:description" content="Meekoly Rusdi is a software engineer who is passionate about learning new technologies and creating memorable user experiences." />
+    <meta name="og:image" content="https://meekoly.com/images/selfie.jpg" />
+    <meta name="og:url" content="https://meekoly.com/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
