--- a/public/index.html
+++ b/public/index.html
@@ -7,26 +7,17 @@
       name="description"
       content="Meekoly Rusdi is a software engineer who is passionate about learning new technologies and creating memorable user experiences."
     />
-    <meta property="og:title" content="Meeko Rusdi" />
     <meta name="image" content="https://meekoly.com/images/selfie.jpg" />
+    <meta property="og:title" content="Meeko Rusdi" />
     <meta name="og:description" content="Meekoly Rusdi is a software engineer who is passionate about learning new technologies and creating memorable user experiences." />
     <meta name="og:image" content="https://meekoly.com/images/selfie.jpg" />
     <meta name="og:url" content="https://meekoly.com/" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="og:type" content="website" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Meeko Rusdi</title>
   </head>
   <body>
