--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Meeko Rusdi</title>
   </head>
