--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
       name="description"
       content="Meekoly Rusdi is a software engineer who is passionate about learning new technologies and creating memorable user experiences."
     />
-    <meta name="image" content="https://meekoly.com/images/home.png" />
+    <meta name="image" content="/images/home.png" />
     <meta property="og:title" content="Meeko Rusdi" />
     <meta name="og:description" content="Meekoly Rusdi is a software engineer who is passionate about learning new technologies and creating memorable user experiences." />
-    <meta name="og:image" property=”og:image” content="https://meekoly.com/images/home.png" />
+    <meta name="og:image" property=”og:image” content="/images/home.png" />
     <meta name="og:url" content="https://meekoly.com/" />
     <meta name="og:type" content="website" />
     <!--
