--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="Meekoly Rusdi is a software engineer who is passionate about learning new technologies and creating memorable user experiences."
-    />
-    <meta name="image" content="/images/home.png" />
     <meta property="og:title" content="Meeko Rusdi" />
-    <meta name="og:description" content="Meekoly Rusdi is a software engineer who is passionate about learning new technologies and creating memorable user experiences." />
-    <meta name="og:image" property=”og:image” content="/images/home.png" />
-    <meta name="og:url" content="https://meekoly.com/" />
-    <meta name="og:type" content="website" />
+    <meta property="og:description" content="Meekoly Rusdi is a software engineer who is passionate about learning new technologies and creating memorable user experiences." />
+    <meta property=”og:image” content="https://meekoly.com/images/home.png" />
+    <meta property="og:url" content="https://meekoly.com/" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
