--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,7 @@
     <meta property="og:description" content="Meekoly Rusdi is a software engineer who is passionate about learning new technologies and creating memorable user experiences." />
     <meta property=”og:image” content="https://meekoly.com/images/home.png" />
     <meta property="og:url" content="https://meekoly.com/" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <script src="https://kit.fontawesome.com/e6c8d04d12.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Meeko Rusdi</title>
